force-app/main/default/objects/validation_test__c/validation_test__c.object-meta.xml
<CustomObject>
    <label>validation test</label>
    <nameField>
        <label>validatio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>validation test</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>