force-app/main/default/objects/validation_test__c/fields/employee_name__c.field-meta.xml
<CustomField>
    <fullName>employee_name__c</fullName>
    <label>employee name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>