force-app/main/default/objects/validation_test__c/fields/mobile_number__c.field-meta.xml
<CustomField>
    <fullName>mobile_number__c</fullName>
    <label>mobile number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>