force-app/main/default/objects/validation_test__c/fields/salary2__c.field-meta.xml
<CustomField>
    <fullName>salary2__c</fullName>
    <label>salary2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>