force-app/main/default/objects/validation_test__c/validationRules/email_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>email_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>OR(NOT(REGEX(email__c ,&quot;[a-zA-Z0-9\\.\\-]+[@][a-z]+\\.[a-z]+&quot;)), ISBLANK( email__c ), LEN( email__c )&gt;80, LEN( email__c )&lt;0 )</errorConditionFormula>
    <errorDisplayField>email__c</errorDisplayField>
    <errorMessage>enter valid email</errorMessage>
</ValidationRule>