force-app/main/default/objects/validation_test__c/validationRules/name_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>name_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISNUMBER(employee_name__c), ISBLANK(employee_name__c))</errorConditionFormula>
    <errorDisplayField>employee_name__c</errorDisplayField>
    <errorMessage>it should not contain numbers.</errorMessage>
</ValidationRule>