force-app/main/default/objects/validation_test__c/validationRules/salary_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>salary_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>OR(NOT(ISNUMBER( salary2__c ) ), LEN( salary2__c ) &gt;6, LEN( salary2__c ) &lt;4, ISBLANK( salary2__c ), VALUE(salary2__c )&lt;0 )</errorConditionFormula>
    <errorDisplayField>salary2__c</errorDisplayField>
    <errorMessage>salary should  be 4 to 6 digits</errorMessage>
</ValidationRule>